[package]
name = "line-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
regex = "1.10.6"
tokio = { version = "1.39.3", features = ["full"] }
ffmpeg-cli = "0.1.0"